--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "R-Green-API",
+  "name": "R_Green_API",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "DEBUG=app:* nodemon index",
+    "dev": "DEBUG=express:*,app:* nodemon index",
+    "debug": "DEBUG=express:*,app:* npm run start",
+    "inspect": "DEBUG=express:*,app:* nodemon --inspect index",
     "start": "NODE_ENV=production node index",
     "prepare": "husky install"
   },
@@ -12,8 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.2",
+    "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.8"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
