--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@hapi/boom": "^9.1.2",
     "@hapi/joi": "^17.1.1",
+    "apollo-server": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "mongodb": "^3.6.8"
   },
   "devDependencies": {
