--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hapi/boom": "^9.1.2",
     "@hapi/joi": "^17.1.1",
     "apollo-server": "^3.0.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
