Add validate if username exist

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install"
   },
   "keywords": [],
-  "author": "",
+  "author": "Andres David Solarte Vidal",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.1.2",
