--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "name": "rgreenapi",
   "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
